<resources>
    <string name="app_name">ServiceIntro_lab</string>

    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>

    <string name="button_login_label">Login</string>

    <string name="default_email">test@mail.com</string>
    <string name="default_password">123456</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="user_email_key">bitcamp.services.user_email</string>
    <string name="user_password_key">bitcamp.services.user_password</string>
    <string name="title_activity_send_post">SendPostActivity</string>

</resources>
